Translated index & FAQ to EN

--- a/en/faq.html
+++ b/en/faq.html
@@ -22,9 +22,9 @@
         <a href="/en/faq" class="btn radius-btn py-3 px-2">EN</a>
       </div>
       <div class="mx-auto w-70vw">
-        <h1 class="title-main">Najczęściej<br>zadawane<br>pytania</h1><br>
-        <a href="/pl/" class="btn radius-btn py-3 px-3"><i class="fa fa-undo"></i></a>
-        <a href="#faq" class="btn radius-btn py-3 px-3"><i class="fa fa-caret-down"></i> WIĘCEJ</a>
+        <h1 class="title-main">Frequently<br>asked<br>questions</h1><br>
+        <a href="/en/" class="btn radius-btn py-3 px-3"><i class="fa fa-undo"></i></a>
+        <a href="#faq" class="btn radius-btn py-3 px-3"><i class="fa fa-caret-down"></i> MORE</a>
       </div>
       <img src="/static/img/example.png" class="example">
     </div>
@@ -33,7 +33,7 @@
         <div class="row d-flex justify-content-center">
           <div class="col-lg-6 col-md-8">
             <div class="section-title section-title2 text-center">
-              <h2>Wszystko,<br>co chcesz wiedzieć</h2>
+              <h2>Everything,<br>you may want to know</h2>
             </div>
           </div>
         </div>
@@ -45,30 +45,30 @@
           <div class="col-xl-4 col-lg-4 col-md-6 my-5">
             <div class="single-card text-center">
               <div class="card-top">
-                <span><b>Jakie sklepy są wspierane?</b></span>
+                <span><b>What stores are supported?</b></span>
               </div>
               <div class="card-bottom">
-                <p>Dropthon oferuje wsparcie dla <span class="font-weight-bold">Zalando Lounge</span> oraz <span class="font-weight-bold">Nike SNKRS</span>. W najbliższej przyszłości pojawiać będą się kolejne sklepy.</p>
+                <p>Dropthon currently supports <span class="font-weight-bold">Zalando Lounge</span> and <span class="font-weight-bold">Nike SNKRS</span>. More stores will be added in future Dropthon versions.</p>
               </div>
             </div>
           </div>
           <div class="col-xl-4 col-lg-4 col-md-6 my-5">
             <div class="single-card text-center">
               <div class="card-top">
-                <span><b>Co jeśli nie uda się zdobyć przedmiotu?</b></span>
+                <span><b>What if you fail to get an item?</b></span>
               </div>
               <div class="card-bottom">
-                <p>Spokojnie - za dropy, których nie udało się zrealizować, <span class="font-weight-bold">nie pobieramy opłaty</span>. Otrzymujesz więc gwarancję, że Twoje pieniądze nie przepadną.</p>
+                <p>Keep calm - we <span class="font-weight-bold">do NOT charge you</span> for unsuccessful drops. You're guaranteed that your money won't be lost.</p>
               </div>
             </div>
           </div>
           <div class="col-xl-4 col-lg-4 col-md-6 my-5">
             <div class="single-card text-center">
               <div class="card-top">
-                <span><b>Jak mogę się skontaktować z zespołem Dropthona?</b></span>
+                <span><b>How can I contact Dropthon team?</b></span>
               </div>
               <div class="card-bottom">
-                <p>Skontaktować się z nami możesz wysyłając wiadomość e-mail pod adres <a href="mailto:customer@dropthon.com" class="font-weight-bold">customer@dropthon.com</a> lub poprzez nasze social media.</p>
+                <p>You can get in touch with us by sending an e-mail message to <a href="mailto:customer@dropthon.com" class="font-weight-bold">customer@dropthon.com</a> or through our social media.</p>
               </div>
             </div>
           </div>
@@ -80,7 +80,7 @@
         <div class="row align-items-center">
           <div class="col-xl-12">
             <div class="footer-copy-right">
-               <p>Copyleft 2020 <a href="https://stanislawowski.pl/" target="_blank">Stanisławowski Research & Development</a>  -  <a href="/pl/privacy">Polityka prywatności</a>  -  <a href="/pl/tos">Regulamin</a></p>
+               <p>Copyleft 2020 <a href="https://stanislawowski.pl/" target="_blank">Stanisławowski Research & Development</a>  -  <a href="/en/privacy">Privacy policy</a>  -  <a href="/en/tos">Terms of Service</a></p>
             </div>
           </div>
         </div>
