--- a/en/index.html
+++ b/en/index.html
@@ -23,9 +23,9 @@
         <a href="/en/" class="btn radius-btn py-3 px-2">EN</a>
       </div>
       <div class="mx-auto w-70vw">
-        <h1 class="title-main">Najbardziej<br>zaawansowany<br>streetwear bot.</h1><br>
-        <a href="https://panel.dropthon.com/" class="btn radius-btn py-3 px-3"><i class="fa fa-sign-in font-weight-bold"></i> LOGOWANIE</a>
-        <a href="/pl/faq" class="btn radius-btn py-3 px-3"><i class="fa fa-question-circle font-weight-bold"></i> FAQ</a>
+        <h1 class="title-main">The world's<br>most advanced<br>streetwear bot.</h1><br>
+        <a href="https://panel.dropthon.com/" class="btn radius-btn py-3 px-3"><i class="fa fa-sign-in font-weight-bold"></i> SIGN IN</a>
+        <a href="/en/faq" class="btn radius-btn py-3 px-3"><i class="fa fa-question-circle font-weight-bold"></i> FAQ</a>
       </div>
       <img src="/static/img/example.png" class="example">
     </div>
@@ -34,7 +34,7 @@
         <div class="row d-flex justify-content-center">
           <div class="col-lg-6">
             <div class="section-title text-center">
-              <h2>Dlaczego Dropthon?</h2>
+              <h2>Why Dropthon?</h2>
             </div>
           </div>
         </div>
@@ -45,8 +45,8 @@
                 <span class="fa fa-cog faa-spin animated"></span>
               </div>
               <div class="service-cap">
-                <h4>Perfekcyjny w każdym detalu</h4>
-                <p>Skrypty napisane w niskopoziomowym języku, serwery z możliwie najszybszym połączeniem internetowym, intuicyjny interfejs, mnogość funkcji - to właśnie Dropthon.</p>
+                <h4>Perfect in every detail</h4>
+                <p>Low-level language scripts, servers with lightning fast internet connection, user-friendly GUI, rich functionality - that's Dropthon.</p>
               </div>
             </div>
           </div>
@@ -56,8 +56,8 @@
                 <span class="fa fa-thumbs-up faa-bounce animated"></span>
               </div>
               <div class="service-cap">
-                <h4>Gwarancja zadowolenia</h4>
-                <p>Dokładamy wszelkich starań, aby każdy pożądany przez ciebie przedmiot został zdobyty. Za każdy nieudany drop zwracamy automatycznie pieniądze!</p>
+                <h4>Satisfaction guarantee</h4>
+                <p>We try our best to make sure that you get every item you want. We'll automatically refund for unsuccessful drops!</p>
               </div>
             </div>
           </div>
@@ -67,8 +67,8 @@
                 <span class="fa fa-shield faa-tada animated"></span>
               </div>
               <div class="service-cap">
-                <h4>Możesz czuć się bezpiecznie</h4>
-                <p>Używamy mocnego szyfrowania, gdzie to tylko możliwe. Nie sprzedajemy twoich danych - i nigdy nie będziemy. Przechowujemy tylko absolutnie niezbędne informacje.</p>
+                <h4>You can feel safe</h4>
+                <p>We're protecting all of your data with military-grade encryption. We do NOT sell any of your informations - and never will. We only store the necessary ones.</p>
               </div>
             </div>
           </div>
@@ -80,7 +80,7 @@
         <div class="row d-flex justify-content-center">
           <div class="col-lg-6 col-md-8">
             <div class="section-title section-title2 text-center">
-              <h2>Najlepsza jakość.<br>W najlepszych cenach.</h2>
+              <h2>Premium quality.<br>At the best prices.</h2>
             </div>
           </div>
         </div>
@@ -93,14 +93,14 @@
             <div class="single-card text-center">
               <div class="card-top">
                 <span>Beginner</span>
-                <h4>19.99 <span>/ pakiet</span></h4>
+                <h4>$4.99 <span>/ packet</span></h4>
               </div>
               <div class="card-bottom">
                 <ul>
-                  <li>Jednorazowa płatność</li>
-                  <li>Pakiet 10 dropów</li>
+                  <li>One time payment</li>
+                  <li>10 drops packet</li>
                 </ul>
-                <a href="https://panel.dropthon.com/" class="btn card-btn1">Kup teraz</a>
+                <a href="https://panel.dropthon.com/" class="btn card-btn1">Buy now</a>
               </div>
             </div>
           </div>
@@ -108,14 +108,14 @@
             <div class="single-card text-center">
               <div class="card-top">
                 <span>Well-dressed</span>
-                <h4>49.99 <span>/ pakiet</span></h4>
+                <h4>$14.99 <span>/ packet</span></h4>
               </div>
               <div class="card-bottom">
                 <ul>
-                  <li>Jednorazowa płatność</li>
-                  <li>Pakiet 30 dropów</li>
+                  <li>One time payment</li>
+                  <li>30 drops packet</li>
                 </ul>
-                <a href="https://panel.dropthon.com/" class="btn card-btn1">Kup teraz</a>
+                <a href="https://panel.dropthon.com/" class="btn card-btn1">Buy now</a>
               </div>
             </div>
           </div>
@@ -123,14 +123,14 @@
             <div class="single-card text-center">
               <div class="card-top">
                 <span>Hypebeast</span>
-                <h4>99.99 <span>/ msc</span></h4>
+                <h4>$24.99 <span>/ month</span></h4>
               </div>
               <div class="card-bottom">
                 <ul>
-                  <li>Pakiet odnawiany co miesiąc</li>
-                  <li>Nielimitowane dropy</li>
+                  <li>Monthly renewed plan</li>
+                  <li>Unlimited drops</li>
                 </ul>
-                <a href="https://panel.dropthon.com/" class="btn card-btn1">Kup teraz</a>
+                <a href="https://panel.dropthon.com/" class="btn card-btn1">Buy now</a>
               </div>
             </div>
           </div>
@@ -142,7 +142,7 @@
         <div class="row align-items-center">
           <div class="col-xl-12">
             <div class="footer-copy-right">
-               <p>Copyleft 2020 <a href="https://stanislawowski.pl/" target="_blank">Stanisławowski Research & Development</a>  -  <a href="/pl/privacy">Polityka prywatności</a>  -  <a href="/pl/tos">Regulamin</a></p>
+               <p>Copyleft 2020 <a href="https://stanislawowski.pl/" target="_blank">Stanisławowski Research & Development</a>  -  <a href="/en/privacy">Privacy policy</a>  -  <a href="/en/tos">Terms of Service</a></p>
             </div>
           </div>
         </div>
