Translated privacy policy to EN

--- a/en/privacy.html
+++ b/en/privacy.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html class="no-js" lang="pl">
+<html class="no-js" lang="en">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Polityka prywatności ~ Dropthon</title>
+    <title>Privacy policy ~ Dropthon</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" type="image/png" href="/favicon.png">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha256-T/zFmO5s/0aSwc6ics2KLxlfbewyRz6UNw1s3Ppf5gE=" crossorigin="anonymous">
@@ -21,9 +21,9 @@
         <a href="/en/privacy" class="btn radius-btn py-3 px-2">EN</a>
       </div>
       <div class="mx-auto w-70vw">
-        <h1 class="title-main">Najbardziej<br>prywatny<br>streetwear bot.</h1><br>
-        <a href="/pl/" class="btn radius-btn py-3 px-3"><i class="fa fa-undo"></i></a>
-        <a href="#more" class="btn radius-btn py-3 px-3"><i class="fa fa-caret-down"></i> WIĘCEJ</a>
+        <h1 class="title-main">The world's<br>most private<br>streetwear bot.</h1><br>
+        <a href="/en/" class="btn radius-btn py-3 px-3"><i class="fa fa-undo"></i></a>
+        <a href="#more" class="btn radius-btn py-3 px-3"><i class="fa fa-caret-down"></i> MORE</a>
       </div>
       <img src="/static/img/example.png" class="example">
     </div>
@@ -32,34 +32,33 @@
         <div class="row d-flex justify-content-center">
           <div class="col-lg-6">
             <div class="section-title text-center">
-              <h2>Polityka prywatności</h2>
+              <h2>Privacy policy</h2>
             </div>
           </div>
         </div>
         <div>
-          <h5><b>§</b> Postanowienia ogólne</h5><br>
-          <p><b>1.</b> Administratorem danych jest <a href="https://stanislawowski.pl/" class="text-danger">Stanisławowski Research & Development</a>. Ochrona danych odbywa się zgodnie z wymogami powszechnie obowiązujących przepisów prawa.</p>
-          <p><b>2.</b> Niniejsza Polityka prywatności ma zastosowanie dla wszystkich usług udostępnianych pod domeną <a href="https://dropthon.com/" class="text-danger">dropthon.com</a> oraz pod jej subdomenami.</p><br>
-          <h5><b>§</b> Przetwarzane dane</h5><br>
-          <p>Szanujemy prywatność naszych użytkowników. Przechowujemy tylko tyle danych, ile jest absolutnie niezbędne do prawidłowego funkcjonowania naszych usług.</p>
-          <p><b>Formularze kontaktowe</b><br>Jeżeli Użytkownik kontaktował się z naszym zespołem technicznym poprzez formularz kontaktowy wewnątrz bota, <a href="mailto:customer@dropthon.com" class="text-danger">wiadomość e-mail</a>, <a href="https://m.me/dropthon" class="text-danger">komunikator Messenger</a>, lub w dowolny inny sposób, przetwarzane dane to <b>treść wiadomości</b>, <b>imię i nazwisko lub pseudonim</b> oraz w niektórych przypadkach <b>adres e-mail</b>.<br>W przypadku komunikacji z wykorzystaniem zewnętrznych komunikatorów, dane mogą być przetwarzane zgodnie z polityką prywatności dostawcy wykorzystywanego serwisu.<br>
-          <br><b>Płatności</b><br>Do obsługi płatności wykorzystujemy pośredników <a href="https://www.paypal.com/pl/home" class="text-danger">PayPal</a> oraz <a href="https://www.coinpayments.net/" class="text-danger">CoinPayments</a>. Ochrona danych, wykorzystywanych do obsługi płatności będzie odbywać się zgodnie z ich politykami prywatności.<br>
-          <br><b>Streetwear bot</b><br>Aby móc wykorzystywać pełną funkcjonalność bota Dropthon, Użytkownik powinien uzupełnić swoje dane osobowe. Dane, które możemy przetwarzać w tym przypadku to <b>nazwa użytkownika</b>, <b>adres e-mail</b>, <b>imię i nazwisko</b>, <b>numer telefonu</b> oraz <b>adres (kraj, miejscowość, kod pocztowy, nazwa ulicy, numer domu/mieszkania)</b>.<br>Przechowujemy również informacje o zaplanowanych oraz historycznych "dropach".</p><br>
-          <h5><b>§</b> Okres przetwarzania danych</h5><br>
-          <p><b>1.</b> Zgromadzone dane przetwarzamy tak długo, gdy są one niezbędne. Po upłynięciu tego czasu są usuwane one w bezpieczny sposób, zapobiegający możliwości ich odzyskania.
-          <br><b>1.1.</b> Dane przekazane przez Użytkownika poprzez formularz kontaktowy lub w dowolny inny sposób komunikacji przetwarzamy do czasu rozwiązania problemu lub wygaśnięcia sprawy będącej powodem kontaktu.<br>
-          <b>1.2.</b> Dane uzupełnione przez Użytkownika w zakładce "Konto" w streetwear bocie przetwarzane są do czasu ich aktualizacji lub usunięcia konta.<br>
-          <br><h5><b>§</b> Bezpieczeństwo danych</h5><br>
-          <p><b>1. </b>Dokładamy wszelkich starań, aby dane były bezpieczne i nikt niepowołany nigdy nie uzyskał do nich dostępu.<br>
-          <b>2. </b>Każde połączenie z naszymi serwerami jest zabezpieczone pełnym szyfrowaniem SSL.<br>
-          <b>3. </b>Używamy silnego szyfrowania wszędzie, gdzie jest to możliwe. Dyski naszych serwerów są w pełni zaszyfrowane.<br>
-          <b>4. </b>Przetwarzanie danych ograniczamy do niezbędnego do prawidłowego funkcjonowania naszych usług minimum.<br>
-          <b>5. </b>Nie sprzedajemy ani nie dzielimy się z nikim pozyskanymi danymi. I nigdy nie będziemy.<br>
-          <b>6. </b>Nie profilujemy i nigdy nie będziemy profilować naszych Użytkowników.<br>
-          <b>7. </b>Autentyczność arkuszy styli oraz skryptów jest weryfikowana po stronie klienta za pomocą SRI.<br>
-          <b>8. </b>Nie podejmujemy prób ręcznego wglądu / uzyskania dostępu do przechowywanych przez nas danych.</p>
-          <br><h5><b>§</b> Dostęp do danych</h5><br>
-          <p><b>1. </b> Użytkownik ma prawo w każdej chwili zażądać uzyskania dostępu, otrzymania wyeksportowanej kopii, lub usunięcia wszelkich przechowywanych danych na jego temat. W tym celu powinien skontaktować się z naszym Działem Ochrony Danych Osobowych poprzez wiadomość na adres e-mail <a href="mailto:admin@dropthon.com" class="text-danger">admin@dropthon.com</a>.</p>
+          <h5><b>§</b> General provisions</h5><br>
+          <p><b>1.</b> <a href="https://stanislawowski.pl/" class="text-danger">Stanisławowski Research & Development</a> is the Data Administrator. Data protection is carried out in accordance with the local law.</p>
+          <p><b>2.</b> This Privacy Policy applies to all services provided under the <a href="https://dropthon.com/" class="text-danger">dropthon.com</a> domain and its subdomains.</p><br>
+          <h5><b>§</b> Processed data</h5><br>
+          <p>We respect the privacy of our users. We only store as much data as is absolutely necessary for the proper functioning of our services.</p>
+          <p><b>Contact forms</b><br>If the User has contacted our technical team via <a href="mailto:customer@dropthon.com" class="text-danger">e-mail</a>, <a href="https://m.me/dropthon" class="text-danger">Messenger</a>, or in any other way, the data processed are <b>the content of the message</b>, <b>name and surname (or nickname)</b> and in some cases <b>e-mail address</b>.<br>In the case of communication using external messengers, the data may be processed in accordance with the privacy policy of the provider of the website used.<br>
+          <br><b>Payments</b><br>We use <a href="https://www.paypal.com/pl/home" class="text-danger">PayPal</a> gateway to handle payments. The data used to process payments will be protected in accordance with their privacy policies.<br>
+          <br><b>Streetwear bot</b><br>In order to be able to use the full functionality of the Dropthon bot, the User should complete his personal data. The data that we can process in this case is the <b>username</b>, <b>e-mail address</b>, <b>first and last name</b>, <b>phone number</b> and <b>address (country, city, postal code, street name, house / apartment number)</b>.<br>We also store information about scheduled and historical "drops".</p><br>
+          <h5><b>§</b> Data processing period</h5><br>
+          <p><b>1.</b> We process the collected data as long as it's necessary. After this time, they are deleted in a safe way, preventing their recovery.
+          <br><b>1.1.</b> We process the data provided by the User in a private message until the problem is resolved or the matter being the reason for contact expires.<br>
+          <b>1.2.</b> The data provided by the User on the "Account" subpage in streetwear bot are processed until they are updated or the account is deleted.<br>
+          <br><h5><b>§</b> Data safety</h5><br>
+          <p><b>1. </b>We try our best to ensure that the data is safe and that no unauthorized person ever gained access to it.<br>
+          <b>2. </b>Each connection with our servers is secured with full SSL encryption.<br>
+          <b>3. </b>We use strong encryption wherever possible. Our servers' drives are fully encrypted.<br>
+          <b>4. </b>We limit data processing to the minimum necessary for the proper functioning of our services.<br>
+          <b>5. </b>We do not sell or share obtained data with anyone. And never will.<br>
+          <b>6. </b>The authenticity of stylesheets and scripts is verified on the client's side using the SRI.<br>
+          <b>7. </b>We do not attempt to manually view / access data stored by us.</p>
+          <br><h5><b>§</b> Access to the data</h5><br>
+          <p><b>1. </b> The User has the right at any time to request access, exported copy, or deletion of any data stored about him. For this purpose, you should contact our Personal Data Protection Department by sending an e-mail to <a href="mailto:admin@dropthon.com" class="text-danger">admin@dropthon.com</a>.</p>
       </div>
     </section>
     <div class="footer-area py-5">
@@ -67,7 +66,7 @@
         <div class="row align-items-center">
           <div class="col-xl-12">
             <div class="footer-copy-right">
-               <p>Copyleft 2020 <a href="https://stanislawowski.pl/" target="_blank">Stanisławowski Research & Development</a>  -  <a href="/pl/privacy">Polityka prywatności</a>  -  <a href="/pl/tos">Regulamin</a></p>
+               <p>Copyleft 2020 <a href="https://stanislawowski.pl/" target="_blank">Stanisławowski Research & Development</a>  -  <a href="/en/privacy">Privacy policy</a>  -  <a href="/en/tos">Terms of Service</a></p>
             </div>
           </div>
         </div>
