--- a/pl/privacy.html
+++ b/pl/privacy.html
@@ -42,8 +42,8 @@
           <p><b>2.</b> Niniejsza Polityka prywatności ma zastosowanie dla wszystkich usług udostępnianych pod domeną <a href="https://dropthon.com/" class="text-danger">dropthon.com</a> oraz pod jej subdomenami.</p><br>
           <h5><b>§</b> Przetwarzane dane</h5><br>
           <p>Szanujemy prywatność naszych użytkowników. Przechowujemy tylko tyle danych, ile jest absolutnie niezbędne do prawidłowego funkcjonowania naszych usług.</p>
-          <p><b>Formularze kontaktowe</b><br>Jeżeli Użytkownik kontaktował się z naszym zespołem technicznym poprzez formularz kontaktowy wewnątrz bota, <a href="mailto:customer@dropthon.com" class="text-danger">wiadomość e-mail</a>, <a href="https://m.me/dropthon" class="text-danger">komunikator Messenger</a>, lub w dowolny inny sposób, przetwarzane dane to <b>treść wiadomości</b>, <b>imię i nazwisko lub pseudonim</b> oraz w niektórych przypadkach <b>adres e-mail</b>.<br>W przypadku komunikacji z wykorzystaniem zewnętrznych komunikatorów, dane mogą być przetwarzane zgodnie z polityką prywatności dostawcy wykorzystywanego serwisu.<br>
-          <br><b>Płatności</b><br>Do obsługi płatności wykorzystujemy pośredników <a href="https://www.paypal.com/pl/home" class="text-danger">PayPal</a> oraz <a href="https://www.coinpayments.net/" class="text-danger">CoinPayments</a>. Ochrona danych, wykorzystywanych do obsługi płatności będzie odbywać się zgodnie z ich politykami prywatności.<br>
+          <p><b>Formularze kontaktowe</b><br>Jeżeli Użytkownik kontaktował się z naszym zespołem technicznym poprzez <a href="mailto:customer@dropthon.com" class="text-danger">wiadomość e-mail</a>, <a href="https://m.me/dropthon" class="text-danger">komunikator Messenger</a>, lub w dowolny inny sposób, przetwarzane dane to <b>treść wiadomości</b>, <b>imię i nazwisko lub pseudonim</b> oraz w niektórych przypadkach <b>adres e-mail</b>.<br>W przypadku komunikacji z wykorzystaniem zewnętrznych komunikatorów, dane mogą być przetwarzane zgodnie z polityką prywatności dostawcy wykorzystywanego serwisu.<br>
+          <br><b>Płatności</b><br>Do obsługi płatności wykorzystujemy pośrednika <a href="https://www.paypal.com/pl/home" class="text-danger">PayPal</a>. Ochrona danych, wykorzystywanych do obsługi płatności będzie odbywać się zgodnie z jego polityką prywatności.<br>
           <br><b>Streetwear bot</b><br>Aby móc wykorzystywać pełną funkcjonalność bota Dropthon, Użytkownik powinien uzupełnić swoje dane osobowe. Dane, które możemy przetwarzać w tym przypadku to <b>nazwa użytkownika</b>, <b>adres e-mail</b>, <b>imię i nazwisko</b>, <b>numer telefonu</b> oraz <b>adres (kraj, miejscowość, kod pocztowy, nazwa ulicy, numer domu/mieszkania)</b>.<br>Przechowujemy również informacje o zaplanowanych oraz historycznych "dropach".</p><br>
           <h5><b>§</b> Okres przetwarzania danych</h5><br>
           <p><b>1.</b> Zgromadzone dane przetwarzamy tak długo, gdy są one niezbędne. Po upłynięciu tego czasu są usuwane one w bezpieczny sposób, zapobiegający możliwości ich odzyskania.
@@ -55,9 +55,8 @@
           <b>3. </b>Używamy silnego szyfrowania wszędzie, gdzie jest to możliwe. Dyski naszych serwerów są w pełni zaszyfrowane.<br>
           <b>4. </b>Przetwarzanie danych ograniczamy do niezbędnego do prawidłowego funkcjonowania naszych usług minimum.<br>
           <b>5. </b>Nie sprzedajemy ani nie dzielimy się z nikim pozyskanymi danymi. I nigdy nie będziemy.<br>
-          <b>6. </b>Nie profilujemy i nigdy nie będziemy profilować naszych Użytkowników.<br>
-          <b>7. </b>Autentyczność arkuszy styli oraz skryptów jest weryfikowana po stronie klienta za pomocą SRI.<br>
-          <b>8. </b>Nie podejmujemy prób ręcznego wglądu / uzyskania dostępu do przechowywanych przez nas danych.</p>
+          <b>6. </b>Autentyczność arkuszy styli oraz skryptów jest weryfikowana po stronie klienta za pomocą SRI.<br>
+          <b>7. </b>Nie podejmujemy prób ręcznego wglądu / uzyskania dostępu do przechowywanych przez nas danych.</p>
           <br><h5><b>§</b> Dostęp do danych</h5><br>
           <p><b>1. </b> Użytkownik ma prawo w każdej chwili zażądać uzyskania dostępu, otrzymania wyeksportowanej kopii, lub usunięcia wszelkich przechowywanych danych na jego temat. W tym celu powinien skontaktować się z naszym Działem Ochrony Danych Osobowych poprzez wiadomość na adres e-mail <a href="mailto:admin@dropthon.com" class="text-danger">admin@dropthon.com</a>.</p>
       </div>
