Internationalized preview images

--- a/en/tos.html
+++ b/en/tos.html
@@ -25,7 +25,7 @@
         <a href="/pl/" class="btn radius-btn py-3 px-3"><i class="fa fa-undo"></i></a>
         <a href="#more" class="btn radius-btn py-3 px-3"><i class="fa fa-caret-down"></i> WIĘCEJ</a>
       </div>
-      <img src="/static/img/example.png" class="example">
+      <img src="/static/img/example_en.png" class="example">
     </div>
     <section class="service-area section-padding2 bg-white" id="more">
       <div class="container">
