--- a/en/index.html
+++ b/en/index.html
@@ -27,7 +27,7 @@
         <a href="https://panel.dropthon.com/" class="btn radius-btn py-3 px-3"><i class="fa fa-sign-in font-weight-bold"></i> SIGN IN</a>
         <a href="/en/faq" class="btn radius-btn py-3 px-3"><i class="fa fa-question-circle font-weight-bold"></i> FAQ</a>
       </div>
-      <img src="/static/img/example.png" class="example">
+      <img src="/static/img/example_en.png" class="example">
     </div>
     <section class="service-area section-padding2 bg-white">
       <div class="container">
